<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item
            android:id="@+id/btmHome"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>

        <item
            android:id="@+id/btmDzikir"
            android:icon="@drawable/ic_person"
            android:title="@string/dzikir" />

        <item
            android:id="@+id/btmJadwalSholat"
            android:icon="@drawable/ic_access_time"
            android:title="@string/jadwal_sholat"/>

        <item
            android:id="@+id/btmCeritaNabi"
            android:icon="@drawable/ic_library_books"
            android:title="@string/cerita_nabi"/>

        <item
            android:id="@+id/btmTentang"
            android:icon="@drawable/ic_info"
            android:title="@string/tentang"/>


</menu>