<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33CCFF"
    tools:context=".jadwal.JadwalActivity">

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/jadwal_sholat"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subuh"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/box"
        android:clickable="true"
        android:text="@string/subuh"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/dzuhur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tanggal" />

    <TextView
        android:id="@+id/dzuhur"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/box"
        android:text="@string/dzuhur"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/ashar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subuh" />

    <TextView
        android:id="@+id/ashar"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/box"
        android:text="@string/ashar"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/maghrib"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dzuhur" />

    <TextView
        android:id="@+id/maghrib"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/box"
        android:text="@string/maghrib"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/isya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ashar" />

    <TextView
        android:id="@+id/isya"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="141dp"
        android:background="@drawable/box"
        android:text="@string/isya"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maghrib" />

    <TextView
        android:id="@+id/tanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="126dp"
        android:layout_marginBottom="37dp"
        android:text="@string/tanggal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/subuh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:background="@android:color/white"
        app:itemTextColor="@drawable/color_state"
        app:itemIconTint="@drawable/color_state"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_menu"/>
</androidx.constraintlayout.widget.ConstraintLayout>